# PREFACE-v2

./: .gitattributes  .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
docs/: P2_MultiprocessingProcess.py  P2_PostCleaner.py  api.rst  conf.py  configuration.rst  index.rst  installation.rst  make.bat  quickstart.rst  utilities.rst  workflow.rst
docs/_build/doctrees/: api.doctree  configuration.doctree  environment.pickle  index.doctree  installation.doctree  outputs.doctree  quickstart.doctree  utilities.doctree  workflow.doctree
docs/_build/html/: .buildinfo  .buildinfo.bak  api.html  configuration.html  genindex.html  index.html  installation.html  objects.inv  outputs.html  quickstart.html  search.html  searchindex.js  utilities.html  workflow.html
docs/_build/html/_modules/: index.html  preface.html
docs/_build/html/_modules/preface/: configs.html
docs/_build/html/_sources/: api.rst.txt  configuration.rst.txt  index.rst.txt  outputs.rst.txt  quickstart.rst.txt  workflow.rst.txt
preface/: P0_ExoplanetseuImpactMerger.py  P0_ModCheck.py  P1_Cutter.py  P1_ExoplanetseuImpactMerger.py  P1_ImpactMerger.py  P1_ModCheck.py  P1_RankMaker.py  P1_ViabilitySplitter.py  P1_WorkingTEPSetBuilder.py  P2_MultiprocessingProcess.py  P2_MultiprocessingWrapper.py  P2_PostCleaner.py  __init__.py  classes.py  configs.py
preface/csvbank/core/: ExoOrgList.csv  FullTEPSet.csv  FullTEPSetWithAllImpacts.csv  FullTEPSetWithExoOrgImpacts.csv  IERSPath.txt  Scope.csv  SpecConverter.csv  V_Spectral_Corrections_Bank.csv  WorkingTEPSet.csv  allplanets-csv.csv  exoplaneteu_catalog.csv  filter_information.csv  kepplanets-csv.csv  observables.csv
preface/csvbank/core/lookup_tables/altaz/: altaz_lut_generation.py
preface/csvbank/core/temp/: AERONET_AOD+INV_Level2_Daily_V3_monthly-median.csv  ExoplaneteuImpacts.csv
preface/csvbank/core/unused/: MWexoplaneteu_catalog.csv  MWexoplaneteu_catalog.xlsx  RankedTEPSet_DOT_TIRCAM2_K-band_for_Half_Well_Y_Noise_N.csv  TESS_CSV_Columns.odt  TOI_2019.09.02_07.35.11.csv  V_Spectral_Corrections_Bank_Old.csv  exoplaneteu_catalog1.5.csv  exoplaneteu_catalog_2025_06_11.csv  homogeneous-input-csv.csv  homogeneous-par-csv.csv
preface/csvbank/core_unused/: FullTEPSetWithAllImpacts-Intermediate.csv  FullTESS_Set.csv  K_Spectral_Corrections_Bank_Old.csv  WorkingTESS_Set.csv  calculation of impact parameter.xlsx  transitspec.csv
preface/supplementary_files/: README_lime_tbx_installation_guide.txt
preface/unused_code/: P1_InputCheck.py  P1_SpecCutter.py  P2MP_Process_NoMP.py  P2MP_Wrapper.py  P2MP_Wrapper_Datacenter_NoMP.py  P2TimeSplitter.py  PipelineMasterShell.py  old_moon_lut_generator.py  test-Mark.py
preface_spearnet.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: other_utilities_test.py  preface_benchmark_moon.py  preface_benchmark_runtime.py  preface_test.py  wipe_intermediate_csvs.py
tests/results/: RankedTEPSet_TNT ULTRASPEC_r-band_for_Half_Well_Y-SkyNoise_N-Defocus.csv  RankedTEP_test_2.ipynb  gamma_plot.ipynb  runtime_benchmark_all.csv
tests/results/.ipynb_checkpoints/: RankedTEP_test-checkpoint.ipynb  gamma_plot-checkpoint.ipynb
