[build-system]
requires = ["setuptools>=61.0,<69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "preface_spearnet"
version = "2.0.0b6"
description = "An Automated Pipeline for the Selection of Transmission Spectroscopy Candidates"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT"}

keywords = [
  "astronomy",
  "exoplanets",
  "transmission-spectroscopy",
  "observation-planning",
  "target-selection",
  "astrophysics",
  "pipeline"
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

authors = [
  { name = "Chatdanai Sawangwong", email = "chatdanai.saw@gmail.com" },
  { name = "Supachai Awiphan", email = "supachai@narit.or.th" },
  { name = "Orarik Tasuya", email = "orarik@narit.or.th" },
  { name = "Napaporn A-thano", email = "napaporn@narit.or.th" }
]

dependencies = [
  "numpy>=2.1.0",
  "pandas>=2.2.3",
  "matplotlib>=3.9.2",
  "astropy>=7.1.0",
  "scipy>=1.13.1",
  "python-dateutil>=2.9.0",
  "joblib>=1.4.2",
  "tqdm>=4.67.0",
  "ephem>=4.2.1",
  "timezonefinder>=8.2.4",
  "pyarrow>=24.0.0"
]

[project.urls]
Homepage = "https://github.com/chatdanai-s/PREFACE"
BugTracker = "https://github.com/chatdanai-s/PREFACE/issues"
Documentation = "https://preface.readthedocs.io/"


[tool.setuptools.packages.find]
where = ["."]
include = ["preface*",]
exclude = ["__pycache__", "tests", "docs"]

[tool.setuptools.package-data]
preface = [
    "csvbank/core/**/*",
    "supplementary_files/*.pdf",
]